# ip5-poc

./: .env  .gitignore  Dockerfile  README.md  all_policy_assignents.json  azure_scratch.sh  docker-compose-azure.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
src/ip5_poc/: db.py  dependencies.py  main.py  model.py  settings.py
src/ip5_poc/api/: oscal_objects.py  project.py  triggers.py
src/ip5_poc/core/: dependencies.py
src/ip5_poc/data/: catalog.py  component.py
src/ip5_poc/data/raw/: aks-cd.json  oscal_complete_schema_v1.1.3.json  sample-mongo-cd.json  sample-ssp.json  sample_component-definition.json
src/ip5_poc/data/raw/catalogs/: si001-catalog.json
src/ip5_poc/data/raw/components/: aks-cd.json
src/ip5_poc/models/: model.py
src/ip5_poc/services/: azure_service.py  oscal_service.py  project_service.py
